# aui-core

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
auicore/: __main__.py
auicore/adapters/ari/: adapter.py  runner.py
auicore/adapters/pc/: adapter.py  player.py  runner.py
auicore/api/: audio_types.py  tts.py
auicore/runtime/: core.py
auicore/services/tts/: coqui_tts.py  espeak.py  factory.py  piper_tts.py
src/auicore/: __init__.py  __main__.py  prompts.py
src/auicore/adapters/: __init__.py  base.py  factory.py
src/auicore/runtime/: __init__.py  core.py  orchestrator.py
src/auicore/services/adapter/: __init__.py  manager.py
src/auicore/services/app/: __init__.py  manager.py
src/auicore/services/tts/: __init__.py  base.py  factory.py  manager.py
tests/: test_smoke.py
