[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aui-core"
version = "0.2.0"
description = "AUI core runtime: OO AppContext, service container, plugin discovery for TTS and adapters"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [{ name = "AUI AudioUserInterface" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

dependencies = ["aui-common>=0.1.0"]

[project.urls]
Homepage = "https://github.com/AUI-AudioUserInterface/aui-core"

[tool.setuptools.packages.find]
where = ["src"]
