[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aui-core"
version = "0.1.0"
description = "AUI Core runtime: OO runtime, adapter interfaces, TTS facade, prompts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "AUI Project" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "aui-common>=0.1.0",  # placeholder: your local editable install provides this
]

[project.urls]
Homepage = "https://example.com/aui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"auicore" = ["py.typed"]